# editor-rs

./: Cargo.toml
examples/: muti_tab.rs  muti_tab_2.rs  test_open_file.rs  title_bar.rs
src/: central_panel.rs  editor_app.rs  lib.rs  main.rs  menu.rs  title_bar.rs
