[package]
name = "editor-rs"
version = "0.1.0"
authors = ["likanug <likanug.g@qq.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
eframe = { version ="0.31.1", features =  [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }

rfd = "0.15.3"
